--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,7 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Great+Vibes&family=Pacifico&family=Roboto:wght@100;300;400;500;700&family=Satisfy&display=swap" rel="stylesheet">
     <title>Florian Padel</title>
   </head>
   <body>
